// file: proto/gcommon/v2/metrics/v2/retention_policy_info.proto
// version: 1.0.1
// guid: 9b18ea2c-8470-4b90-93e1-437821fdd7f8

edition = "2023";

package common.v2;

import "common/v2/metrics_retention_policy_config.proto";
import "common/v2/retention_policy.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/common/v2";

/**
 * RetentionPolicyInfo combines a retention policy enum with
 * optional configuration details.
 */
message RetentionPolicyInfo {
  // Predefined policy selection
  common.v2.MetricsRetentionPolicy policy = 1;

  // Detailed configuration for custom policies
  common.v2.MetricsRetentionPolicyConfig config = 2;
}
