// file: pkg/config/proto/responses/get_config_history_response.proto
// version: 1.0.0
// guid: a0368a84-a298-4ed2-bccf-799e1e11f6ba

edition = "2023";

package gcommon.v1.config;

import "pkg/config/proto/config_change.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/config/proto";

/**
 * GetConfigHistoryResponse returns configuration change history.
 */
message GetConfigHistoryResponse {
  // List of configuration changes
  repeated ConfigChange changes = 1;
}
