// file: pkg/metrics/proto/update_result.proto
// version: 1.1.0
// guid: cd6fac61-b122-455b-a74b-34935efa71b0

edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/timestamp.proto";
import "pkg/metrics/proto/config_change.proto";
import "pkg/metrics/proto/update_action.proto";
import "pkg/metrics/proto/validation_result.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/metrics/proto";

/**
 * UpdateResult contains information about what was changed.
 */
message UpdateResult {
  // What update action was taken
  UpdateAction action = 1;

  // Configuration changes that were applied
  repeated ConfigChange config_changes = 2;

  // Settings that were updated
  repeated string updated_settings = 3;

  // Settings that were removed
  repeated string removed_settings = 4;

  // Whether a restart occurred
  bool restarted = 5;

  // Update strategy that was used
  string strategy_used = 6;

  // Time taken for the update
  string update_duration = 7;
}
