// file: proto/gcommon/v1/queue/api/export_queue_request.proto
// file: proto/gcommon/v1/queue/export_queue_request.proto
// version: 1.0.0
// guid: 4a3b2c1d-0e9f-8a7b-6c5d-4e3f2a1b0c9d
//
// Request definitions for queue module
//
edition = "2023";

package gcommon.v1.queue;

import "gcommon/v1/common/queue_export_format.proto";
import "gcommon/v1/metrics/time_range.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/queue";

/**
 * Request to export queue data for backup or migration purposes.
 */
message ExportQueueRequest {
  // Name of the queue to export
  string queue_name = 1;

  // Export destination (file path, cloud storage URI, etc.)
  string destination = 2;

  // Export format
  gcommon.v1.common.QueueExportFormat format = 3;

  // Whether to include message data or just metadata
  bool include_message_data = 4;

  // Time range for export (optional)
  gcommon.v1.common.MetricsTimeRange time_range = 5;

  // Whether to compress the export
  bool compress = 6;

  // Maximum number of messages to export (0 = no limit)
  int64 max_messages = 7;

  // Export configuration options
  map<string, string> options = 8;
}
// This file needs proper implementation
