// file: proto/gcommon/v1/queue/messages/subscription_config_update.proto
// version: 1.0.0
// guid: 4ec44184-d7ed-48cf-af8f-5984c57c687d

edition = "2023";

package gcommon.v1.queue;

import "gcommon/v1/config/messages/retry_settings.proto";
import "gcommon/v1/queue/messages/delivery_settings.proto";
import "gcommon/v1/queue/messages/filter_settings.proto";
import "gcommon/v1/queue/messages/routing_settings.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/queue";

message SubscriptionConfigUpdate {
  // Updated subscription name
  string name = 1;

  // Updated delivery settings
  DeliverySettings delivery_settings = 2;

  // Updated retry configuration
  gcommon.v1.config.ConfigRetrySettings retry_settings = 3;

  // Updated filtering rules
  FilterSettings filter_settings = 4;

  // Updated routing configuration
  RoutingSettings routing_settings = 5;

  // Maximum inflight messages
  int32 max_inflight_messages = 6;

  // Acknowledgment timeout (milliseconds)
  int32 ack_timeout_ms = 7;

  // Priority level for messages
  int32 priority_level = 8;
}
